Add file tree navigator sidebar
- Added left-side collapsible file tree sidebar for workspace navigation
- Added 'Open Workspace...' menu item (Ctrl+K Ctrl+O)
- Added 'Show File Tree' menu item (Ctrl+Shift+E)
- Folders expand/collapse with click, files open with double-click
- Current file highlighted in blue with auto-expand to reveal
- Persistent expanded folder state saved to localStorage
- Smart filtering: shows .md, .markdown, .txt, .html files
- Ignores node_modules, .git, .nthing-history, and other system folders
- Sorted display: folders first, then files, alphabetically
- Recursive file tree parsing with 10-level depth limit

--- a/index.html
+++ b/index.html
@@ -109,6 +109,25 @@
     </div>
   </div>
 
+  <!-- File Tree Sidebar -->
+  <div id="file-tree-sidebar" class="file-tree-sidebar hidden">
+    <div class="file-tree-sidebar-header">
+      <div class="file-tree-sidebar-title">
+        <span>📁 Files</span>
+      </div>
+      <button id="close-file-tree-sidebar" class="close-btn">&times;</button>
+    </div>
+    <div class="file-tree-sidebar-content">
+      <div class="file-tree-list" id="file-tree-list">
+        <!-- Tree items populated here -->
+      </div>
+      <div class="file-tree-empty" id="file-tree-empty">
+        <p>No workspace open</p>
+        <button id="open-workspace-btn" class="open-workspace-btn">Open Folder...</button>
+      </div>
+    </div>
+  </div>
+
   <div class="container" data-mode="editor">
     <div class="editor-pane">
       <div class="pane-header">
