--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
     <div id="separator" class="separator" title="Drag to resize"></div>
     <div class="preview-pane">
-      <div class="pane-header">Preview</div>
+      <div class="pane-header"><span class="title">Preview</span></div>
       <div id="preview"></div>
     </div>
   </div>
