Fix Print Preview to print rendered content, not show preview window
Changes:
- Print Preview (Ctrl+P) now prints the rendered markdown directly to printer
- Renamed "Print Preview" button in dialog to "Preview" for clarity
- "Preview" button in settings dialog shows preview window
- "Print Preview" menu item prints the formatted preview pane content

Now the menu functions are:
- Print Settings: Opens configuration dialog
- Print Preview (Ctrl+P): Prints rendered markdown to printer
- Print Raw Markdown (Ctrl+Shift+P): Prints raw markdown to printer
- Print to PDF (Ctrl+Alt+P): Saves as PDF file

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </label>
       </div>
       <div class="dialog-actions">
-        <button id="print-preview-btn" class="primary-btn">Print Preview</button>
+        <button id="print-preview-btn">Preview</button>
         <button id="print-btn" class="primary-btn">Print</button>
         <button id="print-to-pdf-btn">Save as PDF</button>
         <button id="cancel-print-btn">Cancel</button>
